package pt.ipp.isep.dei.esoft.project.domain;

public enum SunExposure {
         NORTH,
         SOUTH,
         WEST,
         EAST
}
