@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction

skinparam classAttributeIconSize 0
'skinparam groupInheritance 2

hide circle
hide methods

title Domain Model


class UnregisteredUser{

}

class SunExposure{
    NORTH
    SOUTH
    EAST
    WEST
}

class Equipment{
}

class Residency extends Property{
    numberOfBedrooms
    numberOfBathrooms
    numberOfParkingSpaces
}

class Property{
    area
    distanceFromCenter
    price
}

class Announcement{
    typeOfBuisness
    typeOfProperty
    publishedDate
    publishedBy
    comission
}

class House extends Residency{
        basement
        inhabitableLoft
}

class Address{
    doorNumber
    zipCode
}

class Apartment extends Residency{

}

class Land extends Property{

}

class State{
}

class District{
}

class City{
}

class Street{
}

class Photo{
}

UnregisteredUser "1" --> "*" Announcement : views
Announcement "1" --> "1" Property : has
Residency "1" --> "*" Equipment : has
House "1" --> "1" SunExposure : has
Property "1" --> "1" Address : has
Address "1" --> "1" State : has
District "*" --> "1" State : part of
City "*" --> "1" District : part of
Street "*" --> "1" City : part of
Announcement "1" --> "*" Photo : has


@enduml